<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addProductModal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<!--    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/add_product"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="16dp"
        android:textAlignment="center"
        android:background="?attr/colorPrimary"
        /> -->

    <EditText
        android:id="@+id/addProdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/addProdBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/addProdPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/addProdLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_location"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/addProdQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        />


    <Button
        android:id="@+id/addProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_product_button"
        />

</LinearLayout>