<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addProductModal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="16dp"
            android:textAlignment="center"
            android:background="?attr/colorPrimary"
            /> -->

    <EditText
        android:id="@+id/editProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editProductBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/editProductLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_location"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editProductQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        >

        <Button
            android:id="@+id/deleteProductButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/delete_product"
            />

        <Button
            android:id="@+id/updateProductButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/update_product"
            />

    </LinearLayout>

</LinearLayout>