<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:id="@+id/login_activity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/inventorio_box"
        android:contentDescription="@string/logo_desc"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textAllCaps="true"
            android:textStyle="bold"
        />


    </LinearLayout>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="50dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="" />

    <TextView
        android:id="@+id/authMessenger"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text=""
        android:visibility="invisible"
        android:textSize="24sp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authMessenger"
        android:layout_marginTop="8dp"
        >

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/register"
    />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/login"
        />

    </LinearLayout>
</RelativeLayout>